# cosmic-panel

./: Cargo.toml
cosmic-panel-config/: Cargo.toml
