[workspace]
members = [
    "cosmic-panel-bin",
    "cosmic-panel-config",
    "xdg-shell-wrapper-config",
]
resolver = "2"

[profile.dev]
opt-level = 1

[workspace.package]
license = "GPL-3.0-only"

[profile.release]
lto = "thin"

[workspace.dependencies]
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit", version = "0.19.2", features = [
    "calloop",
    "xkbcommon",
] }

[patch."https://github.com/Smithay/client-toolkit"]
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit//", features = [
    "calloop",
    "xkbcommon",
] }
[patch."crates-io"]
sctk = { package = "smithay-client-toolkit", git = "https://github.com/Smithay/client-toolkit//", features = [
    "calloop",
    "xkbcommon",
] }

[patch."https://github.com/pop-os/libcosmic"]
cosmic-config = { git = "https://github.com/edfloreshz-ext/libcosmic", rev = "b175e2f6004f383a94aa44aeadea25d50f81d974" }
libcosmic = { git = "https://github.com/edfloreshz-ext/libcosmic", rev = "b175e2f6004f383a94aa44aeadea25d50f81d974" }

# [patch."https://github.com/pop-os/xdg-shell-wrapper"]
# xdg-shell-wrapper-config = { path = "../xdg-shell-wrapper/xdg-shell-wrapper-config" }
# xdg-shell-wrapper = { path = "../xdg-shell-wrapper" }
# xdg-shell-wrapper = { git = "https://github.com/pop-os/xdg-shell-wrapper//", branch = "update" }
# xdg-shell-wrapper-config = { git = "https://github.com/pop-os/xdg-shell-wrapper//", branch = "update" }

# [patch."https://github.com/pop-os/libcosmic"]
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "zbus-4" }
